Factorial corrected and tested